# tqqq

./: .gitignore  AGENTS.md  README.md  demo_dashboard.html  demo_report.html  demo_stock_research.html  pyproject.toml  tradingview.txt
.agents/workflows/: toolcheck.md
.github/workflows/: daily-telegram.yml
.serena/: project.yml
app/api/: main.py
data/: user_input.csv  user_input_2000.csv  user_input_2000_ext.csv
experiments/: best_config.json  ext2000_stress_test_summary.json  ext2000_stress_test_windows.csv  overlay_best_cost_sensitivity.csv  overlay_best_signal.csv  overlay_best_window_comparison.csv  overlay_improvement_best.json  overlay_improvement_summary.json  overlay_improvement_trials.csv  overlay_improvement_winners.csv  passed_leaderboard.csv  phase2_sweep_compare.csv  phase2_sweep_taxed_compare.csv  pre2011_stress_test_summary.json  pre2011_stress_test_windows.csv  stress_test_summary.json  stress_test_windows.csv  tqqq_uplift_passed.csv  tqqq_uplift_summary.json  tqqq_uplift_trials.csv  trials.csv  trials_all.csv  trials_fine.csv
reports/: aftertax_sensitivity_s2.csv  aftertax_sensitivity_user_signal_s2.csv  backtest_equity_primary.csv  backtest_metrics_primary.csv  backtest_tax_ledger_primary.csv  cost_sensitivity_s2.csv  no_tv_transition_replay.csv  no_tv_validation_summary.json  signals_core_strategy_final.csv  signals_s1_s2_s3_user_original.csv  user_signal_backtest_summary.csv  user_signal_tax_ledger.csv
snowball/: snowball_tqqq.txt
tasks/: core_strategy_final_feedback.md  lessons.md  todo.md
tests/: conftest.py  test_bootstrap.py
(+261 files in other folders)
