[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tqqq-strategy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "numpy",
  "duckdb",
  "pyarrow",
  "yfinance",
  "pydantic",
  "fastapi",
  "uvicorn",
  "apscheduler",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
